--- a/Code/main/mpquic-rl/requirements.txt
+++ b/Code/main/mpquic-rl/requirements.txt
@@ -35,4 +35,9 @@ threadpoolctl>=2.0.0
 typed-ast>=1.4.1
 Werkzeug>=1.0.0
 wrapt>=1.11.2
+pandas
+
 pexpect>=4.0.0
+--find-links https://download.pytorch.org/whl/torch_stable.html
+torch>=2.0.0
+# learn2learn
