pytorch model working

--- a/Code/main/mpquic-rl/requirements.txt
+++ b/Code/main/mpquic-rl/requirements.txt
@@ -40,4 +40,4 @@ pandas
 pexpect>=4.0.0
 --find-links https://download.pytorch.org/whl/torch_stable.html
 torch>=2.0.0
-# learn2learn
+learn2learn # currently broken because of qpth, install qpth-0.0.15.tar.gz
