--- a/Code/main/mpquic-sbd/requirements.txt
+++ b/Code/main/mpquic-sbd/requirements.txt
@@ -1,1 +1,3 @@
-pip install mininet==2.3.0.dev6 #might not work, have to use install script from mininet source
+#python2
+#pip install mininet==2.3.0.dev6 #might not work, have to use install script from mininet source
+pandas
